update health check to use a proper base model
